- Added in toggle that will collapse all expanded log entries when viewing logs. - Added styling to the log sheets log content - Added signature image when signature is present - Added edit log button that will allow for logs to be edited on the fly - Made it so that editing a log will not infact remove it or any of the data that was attached to it. It will simply just add a new log to the database with a new signer for that log. - Made it so that the log forms will now accept edit data from pressing the edit button - Added full suite fixes to signature pad - Created new overlay state for signature pad to be activated - Added logic to save proper form data for large images / signatures - Created backend changes to allow for tracking of users who save log content - Fixed misc bugs with saving / transmitting data
Logforms / log sheets should be up and running 100%. If there are bugs let me know!

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -99,6 +99,11 @@ img {
 }
 .day-user-toggle.expand .day-user-value {
 	font-size:16px;
+	background:#fff;
+	width:100%;
+	float:left;
+	margin:5px 0px;
+	color:#333;
 }
 
 .day-user-toggle.expand::before {
